--- a/src/layouts/MainLayouts.module.css
+++ b/src/layouts/MainLayouts.module.css
@@ -12,6 +12,7 @@
     --font-family: 'Montserrat', sans-serif;
     --font-overview: 'Inter', sans-serif;
     --btn-color: #F29D52;
+    --border-color: #b73030;
 }
 
 /*Dark them*/
