--- a/src/components/VideoContainer/MovieVideo.module.css
+++ b/src/components/VideoContainer/MovieVideo.module.css
@@ -3,3 +3,23 @@
     margin: auto;
     margin-top: 5%;
 }
+
+.loading {
+    border: 8px solid var(--text-color);
+    border-top: 8px solid var(--btn-color);
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -25px;
+    margin-left: -25px;
+    display: block;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
